SPCTR-2898: Fixed Masonry Ghost Spacing Issue in Image Gallery (#3171)
* SPCTR-2898: Fixed Masonry Ghost Spacing Issue in Image Gallery

* SPCTR-2898: Added Changelog Entry for Masonry Image Gallery Spacing Fix

--- a/src/blocks/image-gallery/style.scss
+++ b/src/blocks/image-gallery/style.scss
@@ -317,6 +317,7 @@
 		}
 
 		&-thumbnail {
+			vertical-align: middle;
 			-webkit-transition: filter 0.5s, transform 0.5s;
 			-moz-transition: filter 0.5s, transform 0.5s;
 			-o-transition: filter 0.5s, transform 0.5s;
